vTip & JQuery UI conflict on Firefox fix
vTip was emptying the title after a drag and 
just playing up really, so this is a workaround

--- a/public/stylesheets/vtip.css
+++ b/public/stylesheets/vtip.css
@@ -3,7 +3,7 @@ p#vtip {
   position: absolute;
   padding: 10px;
   left: 5px;
-  font-size: 0.8em;
+  font-size: 0.9em;
   background-color: white;
   border: 1px solid #a6c9e2;
   -moz-border-radius: 5px;
